markdown: Fix more issues with new markdown styles.
+ fixes accidental change to sidebar styles in live styles
+ restores ability to do intentionally spaced out lists
+ fixes compressed comments on user pages

Markdown styles remove the top margin from the first element and the bottom margin
from the last element, so that these can be effectively controlled on the container
element.  The userpage lacked any styling for this, so the first line of a comment
appeared squished up against the header line.

--- a/r2/r2/public/static/css/markdown.less
+++ b/r2/r2/public/static/css/markdown.less
@@ -237,6 +237,7 @@
   padding: 5px 10px;
 }
 
+.linklisting .md,
 .commentarea .md {
   margin: 5px 0;
 }
@@ -358,16 +359,6 @@
 
     > :last-child {
       margin-bottom: 0;
-    }
-  }
-
-  li {
-    > :first-child {
-      margin-top: 0;
-      
-      &:last-child {
-        margin-bottom: 0;
-      }
     }
   }
 }
