--- a/r2/r2/public/static/css/old-markdown.less
+++ b/r2/r2/public/static/css/old-markdown.less
@@ -105,3 +105,5 @@
 .link .usertext .md {
   padding: 0 5px;
 }
+
+.titlebox .md { font-size: 90%; }
